need to check the possibiliti to connect blocks to checkboxes and habilit when is checked

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <title>11 - Textures</title>
 </head>
 <body>
+    <div class="board">
+        <input type="checkbox" name="design" id="" class="design" value="{x:0,y:2}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:-1,y:2}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:1,y:1}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:0,y:1}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:-1,y:1}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:1,y:0}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:0,y:0}">
+        <input type="checkbox" name="design" id="" class="design" value="{x:-1,y:0}">
+    </div>
     <canvas class="webgl"></canvas>
 </body>
 </html>
